Modifico editar orden

--- a/src/main/resources/templates/orden/altaOrden.html
+++ b/src/main/resources/templates/orden/altaOrden.html
@@ -41,7 +41,7 @@
                         <label for="fallaCliente" class="formulario-label">Falla</label>
                         <div class="formulario-grupo-input">
                             <input type="text" class="formulario-input" name="fallaCliente" id="fallaCliente"
-                                placeholder="Falla" required>
+                                placeholder="Falla descripta por el Cliente" required>
                         </div>
                     </div>
 
@@ -81,13 +81,13 @@
                     </div>
 
                     <!-- Grupo: Falla Técnico -->
-                    <div class="formulario-grupo" id="grupo-nombre">
+                    <!-- <div class="formulario-grupo" id="grupo-nombre">
                         <label for="fallaTecnico" class="formulario-label">Falla Encontrada</label>
                         <div class="formulario-grupo-input">
                             <input type="text" class="formulario-input" name="fallaTecnico" id="fallaTecnico"
                                 placeholder="Falla Encontrada">
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="col-sm-12 center mrt-30">
