Agrego calendario y fecha a editar orden

--- a/src/main/resources/templates/orden/altaOrden.html
+++ b/src/main/resources/templates/orden/altaOrden.html
@@ -80,6 +80,20 @@
                         </div>
                     </div>
 
+                    <!-- <div class="oculto">
+                        <input type="text" name="fallaTecnico">
+                        <input type="date" name="fechaFinalizacion">
+                        <input type="text" name="fechaFinalizacionFormateado">
+                        <input type="date" name="fechaInicio">
+                        <input type="text" name="fechaInicioFormateado">
+                        <input type="double" name="iva">
+                        <input type="text" name="ivaFormateado">
+                        <input type="double" name="precioManoObra">
+                        <input type="double" name="precioRepuesto">
+                    </div> -->
+
+                    <!-- (aviso_cliente,cliente_id_cliente,equipo_id_equipo,fecha_finalizacion,fecha_finalizacion_formateado,fecha_inicio,fecha_inicio_formateado,iva,iva_form -->
+
                     <!-- Grupo: Falla Técnico -->
                     <!-- <div class="formulario-grupo" id="grupo-nombre">
                         <label for="fallaTecnico" class="formulario-label">Falla Encontrada</label>
